ingress/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.rodogiaco.com`)
      kind: Rule
      services:
        - name: hello-rodo-service
          port: 1234
    - match: Host(`www.rodogiacov2.com`)
      kind: Rule
      services:
        - name: hello-rodo-servicev2
          port: 1234
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tcp-rodo-ingress
  namespace: default
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: hello-tcp-rodo
          port: 1234
