ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
      traefik.ingress.kubernetes.io/router.middlewares:  default-retry@kubernetescrd, default-ratelimit@kubernetescrd

spec:
    rules:
      - host: www.rodogiaco.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: hello-rodo-service
                  port:
                    number: 1234
              path: /
      - host: www.rodogiacov2.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: hello-rodo-servicev2
                  port:
                    number: 1234
              path: /
