ingress/ingressroute-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingresstcp
  namespace: beta
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: hello-tcp-rodo
          port: 1234

#  tls:
#    certResolver: hello-rodo-le
#    passthrough: false
---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ingresshttps
#  namespace: beta
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: Host(`kuberodo.ddns.net`)
#      kind: Rule
#      services:
#        - name: hello-rodo-servicev2
#          port: 1234
#  tls:
#    certResolver: hello-rodo-le
#    options:
#      name: tls-option
#      namespace: beta
